--- a/todo-list-collab-master/html-css-finished/index.html
+++ b/todo-list-collab-master/html-css-finished/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+     <iframe src="http://mytypings.com" style="width:500px; height:500px">
     <h1 class="title">Stuff I need to do</h1>
 
     <div class="all-tasks">
