--- a/ack/html-css-finished/index.html
+++ b/ack/html-css-finished/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <iframe src="http://mytypings.com" style="width:500px; height:500px">  
 
     <div class="all-tasks">
       <h2 class="task-list-title">My lists</h2>
