--- a/ack/index1.html
+++ b/ack/index1.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-  <iframe src="index.html" style="width:8s00px; height:700px">
+  <iframe src="index.html" style="width:800px; height:700px">
 </body>
 
 </html>
